--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             font-family: 'Handlee', cursive;
         }
 
+        .envelope-wrapper {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            animation: float 3s ease-in-out infinite;
+        }
+
         #envelope {
             position: relative;
             width: min(280px, 90vw);
@@ -102,11 +109,11 @@
             text-shadow: 0 2px 3px rgba(0,0,0,0.1);
         }
 
-        .open .flap {
+        #envelope.open .flap {
             transform: rotateX(180deg);
         }
 
-        .open .letter {
+        #envelope.open .letter {
             transform: translateY(-60px) rotate(-2deg);
         }
 
@@ -147,10 +154,6 @@
         @keyframes float {
             0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-10px); }
-        }
-
-        .envelope-wrapper {
-            animation: float 3s ease-in-out infinite;
         }
     </style>
 </head>
