--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="letter-corner corner-tl"></div>
                 <div class="letter-corner corner-br"></div>
                 <div class="message">
-                    <p>You deserve the</p>
+                    <p>you deserve the</p>
                     <p>world and more</p>
                 </div>
             </div>
