--- a/index.html
+++ b/index.html
@@ -54,34 +54,39 @@
         }
 
         .flap {
-            border-left: 50% solid transparent;
-            border-right: 50% solid transparent;
+            border-left: 140px solid transparent;
+            border-right: 140px solid transparent;
             border-bottom: 82px solid transparent;
             border-top: 98px solid var(--color-flap);
             transform-origin: top;
             pointer-events: none;
+            z-index: 5; /* Ensure flap is on top when closed */
         }
 
         .pocket {
-            border-left: 50% solid var(--color-env);
-            border-right: 50% solid var(--color-env);
+            border-left: 140px solid var(--color-env);
+            border-right: 140px solid var(--color-env);
             border-bottom: 90px solid var(--color-env2);
             border-top: 90px solid transparent;
             border-bottom-left-radius: 6px;
             border-bottom-right-radius: 6px;
+            z-index: 2; /* Pocket behind the flap */
         }
 
         .letter {
-            position: relative;
+            position: absolute;
             background-color: #e0d9dd;
             width: 90%;
-            margin: 0 auto;
             height: 90%;
             top: 5%;
+            left: 5%;
             border-radius: 6px;
             box-shadow: 0 2px 26px rgba(0,0,0,.08);
             padding: 15px;
             box-sizing: border-box;
+            z-index: 1; /* Letter behind the pocket and flap */
+            transform: translateY(0);
+            transition: transform 0.4s ease, z-index 0.6s;
         }
 
         .letter:after {
@@ -209,25 +214,25 @@
         .open .flap {
             transform: rotateX(180deg);
             transition: transform 0.4s ease, z-index 0.6s;
-            z-index: 1;
+            z-index: 1; /* Flap moves behind the letter when open */
         }
 
         .close .flap {
             transform: rotateX(0deg);
             transition: transform 0.4s 0.6s ease, z-index 1s;
-            z-index: 5;
+            z-index: 5; /* Flap stays on top when closed */
         }
 
         .close .letter {
-            transform: translateY(0px); 
+            transform: translateY(0); 
             transition: transform 0.4s ease, z-index 1s;
-            z-index: 1;
+            z-index: 1; /* Letter stays behind the flap when closed */
         }
 
         .open .letter {
             transform: translateY(-60px) rotate(-2deg);
             transition: transform 0.4s 0.6s ease, z-index 0.6s;
-            z-index: 2;
+            z-index: 2; /* Letter moves up when open */
         }
 
         .reset {
