--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     </div>
     <div class="reset">
         <button id="open">Open Envelope</button>
-        <button id="reset">Close Envelope</button>
+        <button id="reset">Close</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
